--- a/Huffman/Views/Shared/_Layout.cshtml
+++ b/Huffman/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <title>@ViewBag.Title</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="http://codepen.io/Tefferson/pen/aNYaKv.css" rel="stylesheet" />
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <meta name="viewport" content="width=device-width" />
 </head>
 <body>
