style(index): adicionados títulos para as textareas.

--- a/Huffman/Views/Home/Index.cshtml
+++ b/Huffman/Views/Home/Index.cshtml
@@ -18,8 +18,14 @@
     </div>
 
     <div id="txt-container">
-        <textarea id="txt-in" cols="51" rows="20" placeholder="entrada..."></textarea>
-        <textarea id="txt-out" cols="51" rows="20" placeholder="saída..."></textarea>
+        <div class="txt-container">
+            <h2 class="txt-title">Entrada</h2>
+            <textarea id="txt-in" cols="51" rows="20" placeholder="entrada..."></textarea>
+        </div>
+        <div class="txt-container">
+            <h2 class="txt-title">Saída</h2>
+            <textarea id="txt-out" cols="51" rows="20" placeholder="saída..."></textarea>
+        </div>
     </div>
 
 </section>
