--- a/Huffman/Views/Home/Index.cshtml
+++ b/Huffman/Views/Home/Index.cshtml
@@ -11,19 +11,31 @@
 }
 
 <section id="main-sec">
-    <h1 class="title">Em construção</h1>
+    <h1 class="title">Codificação de Huffman</h1>
     <div id="ctrl">
-        <input type="file" onchange="setInputText()" id="txtFile" />
+        <input type="file" onchange="setInputText()" id="txt-file" />
         <input type="button" value="send" onclick="sendText()" />
+        <input id="radio-encode" class="codec" type="radio" value="1" name="codec" checked />
+        <input id="radio-decode" class="codec" type="radio" value="0" name="codec" />
     </div>
 
     <div id="txt-container">
         <div class="txt-container">
-            <h2 class="txt-title">Entrada</h2>
+            <h2 id="title-in" class="txt-title">
+                Entrada
+                <label class="download-button" for="dlIn">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 41.7 41.7" xml:space="preserve" width="512" height="512"><path d="M31.6 21.8c0.4-0.4 0.4-1.1 0-1.6 -0.4-0.4-1.1-0.4-1.6 0l-8 8V1.7c0-0.6-0.5-1.1-1.1-1.1 -0.6 0-1.1 0.5-1.1 1.1v26.5l-8-8c-0.4-0.4-1.2-0.4-1.6 0 -0.4 0.4-0.4 1.1 0 1.6l10 10c0.4 0.4 1.1 0.4 1.6 0L31.6 21.8zM39.5 29.1c0-0.6 0.5-1.1 1.1-1.1 0.6 0 1.1 0.5 1.1 1.1v10.9c0 0.6-0.5 1.1-1.1 1.1H1.1C0.5 41.1 0 40.6 0 40v-10.9c0-0.6 0.5-1.1 1.1-1.1s1.1 0.5 1.1 1.1v9.8h37.2V29.1z" fill="#FFFFFF" /></svg>
+                </label><input id="dlIn" type="button" onclick="downloadInput()" style="display:none;" />
+            </h2>
             <textarea id="txt-in" cols="51" rows="20" placeholder="entrada..."></textarea>
         </div>
-        <div class="txt-container">
-            <h2 class="txt-title">Saída</h2>
+        <div id="title-out" class="txt-container">
+            <h2 class="txt-title">
+                Saída
+                <label class="download-button" for="dlOut">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 41.7 41.7" xml:space="preserve" width="512" height="512"><path d="M31.6 21.8c0.4-0.4 0.4-1.1 0-1.6 -0.4-0.4-1.1-0.4-1.6 0l-8 8V1.7c0-0.6-0.5-1.1-1.1-1.1 -0.6 0-1.1 0.5-1.1 1.1v26.5l-8-8c-0.4-0.4-1.2-0.4-1.6 0 -0.4 0.4-0.4 1.1 0 1.6l10 10c0.4 0.4 1.1 0.4 1.6 0L31.6 21.8zM39.5 29.1c0-0.6 0.5-1.1 1.1-1.1 0.6 0 1.1 0.5 1.1 1.1v10.9c0 0.6-0.5 1.1-1.1 1.1H1.1C0.5 41.1 0 40.6 0 40v-10.9c0-0.6 0.5-1.1 1.1-1.1s1.1 0.5 1.1 1.1v9.8h37.2V29.1z" fill="#FFFFFF" /></svg>
+                </label><input id="dlOut" type="button" onclick="downloadOutput()" style="display:none;" />
+            </h2>
             <textarea id="txt-out" cols="51" rows="20" placeholder="saída..."></textarea>
         </div>
     </div>
@@ -32,33 +44,74 @@
 
 <script>
 
-    function setInputText(){
-        var file = document.querySelector("#txtFile").files[0];
+    function setInputText() {
+        var file = document.querySelector("#txt-file").files[0];
         if (file) {
             var reader = new FileReader();
             reader.readAsText(file, "ASCII");
             reader.onload = function (evt) {
-                document.getElementById('txt-in').value = evt.target.result;
+                $('#txt-in').val(evt.target.result);
             }
             reader.onerror = function (evt) {
                 alert('oi');
-            }            
+            }
         }
     };
 
-    function sendText() {        
+    function encodeFile() {
         $.ajax({
-            url: "/Home/ProcessFile",
+            url: "/Home/EncodeFile",
             type: "POST",
-            data: { txt: document.getElementById('txt-in').value },
-            DataType: "text",
+            data: { txt: $('#txt-in').val() },
+            dataType: "text",
             success: function (res) {
-                console.log(res.encodedText.length);
-                $("#txt-out").val(res.encodedText.reduce((a,b)=>a+String.fromCharCode(b)));
+                $("#txt-out").val(res.encodedText.reduce((a, b) =>a + String.fromCharCode(b)));
             },
             error: function (err) {
                 alert(err);
             }
         });
+    };
+
+    function decodeFile() {
+        $.ajax({
+            url: "/Home/DecodeFile",
+            type: "POST",
+            data: { txt: $('#txt-in').val() },
+            dataType: "text",
+            success: function (res) {
+                $("#txt-out").val(res.resultText);
+            },
+            error: function (err) {
+                alert(err);
+            }
+        });
+    };
+
+    function sendText() {
+        var encode = document.querySelector('#radio-encode').checked;
+        if (encode) {
+            encodeFile();
+        }
+        else {
+            decodeFile();
+        };
+    };
+
+    function downloadInput() {
+        var content = $('#txt-in').val();
+        download(content, 'input.txt');
+    };
+
+    function downloadOutput() {
+        var content = $('#txt-out').val();
+        download(content, 'output.txt.teff');
+    };
+
+    function download(content, filename) {
+        var a = document.createElement('a');
+        a.setAttribute('download', filename);
+        a.setAttribute('href', 'data:application/octet-stream,' + content);
+        a.click();
     };
 </script>
