--- a/Huffman/Views/Home/Index.cshtml
+++ b/Huffman/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 41.7 41.7" xml:space="preserve" width="512" height="512"><path d="M31.6 21.8c0.4-0.4 0.4-1.1 0-1.6 -0.4-0.4-1.1-0.4-1.6 0l-8 8V1.7c0-0.6-0.5-1.1-1.1-1.1 -0.6 0-1.1 0.5-1.1 1.1v26.5l-8-8c-0.4-0.4-1.2-0.4-1.6 0 -0.4 0.4-0.4 1.1 0 1.6l10 10c0.4 0.4 1.1 0.4 1.6 0L31.6 21.8zM39.5 29.1c0-0.6 0.5-1.1 1.1-1.1 0.6 0 1.1 0.5 1.1 1.1v10.9c0 0.6-0.5 1.1-1.1 1.1H1.1C0.5 41.1 0 40.6 0 40v-10.9c0-0.6 0.5-1.1 1.1-1.1s1.1 0.5 1.1 1.1v9.8h37.2V29.1z" fill="#FFFFFF" /></svg>
                 </label><input id="dlIn" type="button" onclick="downloadInput()" style="display:none;" />
             </h2>
-            <textarea id="txt-in" cols="51" rows="20" placeholder="entrada..."></textarea>
+            <textarea id="txt-in" readonly="readonly" unselectable="on" cols="51" rows="20" placeholder="entrada..."></textarea>
         </div>
         <div id="title-out" class="txt-container">
             <h2 class="txt-title">
@@ -36,13 +36,19 @@
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 41.7 41.7" xml:space="preserve" width="512" height="512"><path d="M31.6 21.8c0.4-0.4 0.4-1.1 0-1.6 -0.4-0.4-1.1-0.4-1.6 0l-8 8V1.7c0-0.6-0.5-1.1-1.1-1.1 -0.6 0-1.1 0.5-1.1 1.1v26.5l-8-8c-0.4-0.4-1.2-0.4-1.6 0 -0.4 0.4-0.4 1.1 0 1.6l10 10c0.4 0.4 1.1 0.4 1.6 0L31.6 21.8zM39.5 29.1c0-0.6 0.5-1.1 1.1-1.1 0.6 0 1.1 0.5 1.1 1.1v10.9c0 0.6-0.5 1.1-1.1 1.1H1.1C0.5 41.1 0 40.6 0 40v-10.9c0-0.6 0.5-1.1 1.1-1.1s1.1 0.5 1.1 1.1v9.8h37.2V29.1z" fill="#FFFFFF" /></svg>
                 </label><input id="dlOut" type="button" onclick="downloadOutput()" style="display:none;" />
             </h2>
-            <textarea id="txt-out" cols="51" rows="20" placeholder="saída..."></textarea>
+            <textarea id="txt-out" readonly="readonly" unselectable="on" cols="51" rows="20" placeholder="saída..."></textarea>
         </div>
     </div>
 
 </section>
 
 <script>
+
+    $(document).ready(function() {
+        $('#txt-out').bind('cut copy paste', function(event) {
+            event.preventDefault();
+        });
+    });
 
     function setInputText() {
         var file = document.querySelector("#txt-file").files[0];
@@ -101,8 +107,7 @@
     }
 
     function sendText() {
-        var encode = document.querySelector('#radio-encode').checked;
-        if (encode) {
+        if (encodeSelected()) {
             encodeFile();
         }
         else {
@@ -110,14 +115,20 @@
         };
     };
 
+    function encodeSelected(){
+        return document.querySelector('#radio-encode').checked;
+    }
+
     function downloadInput() {
         var content = $('#txt-in').val();
-        download(content, 'input.txt');
+        var extension = '.txt'+(encodeSelected()?'':'.teff');
+        download(content, 'input'+extension);
     };
 
     function downloadOutput() {
         var content = $('#txt-out').val();
-        download(content, 'output.txt.teff');
+        var extension = '.txt'+(encodeSelected()?'.teff':'')
+        download(content, 'output'+extension);
     };
 
     function download(content, filename) {
